--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -44,11 +44,11 @@
         {% endblock content %}
     </div>
     <footer>
-    <div class="git_project">
-        <a href="https://github.com/myshyak5/-project_site" target="git_blank">
-            <img src="{% static 'img/git_project.png' %}" alt="" class="git_img">
-        </a>
-    </div>
-</footer>
+        <div class="gi-project">
+            <a href="https://github.com/myshyak5/-project_site" target="git_blank">
+                <img src="{% static 'img/git_project.png' %}" alt="" class="git-img">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
