--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -268,6 +268,7 @@ footer {
     max-width: 195px;
 }
 .cart_discount {
+    font-size: 16px;
     display: flex;
     gap: 4px;
     margin: 35px 0 10px 0;
