--- a/eshop/users/templates/users/login.html
+++ b/eshop/users/templates/users/login.html
@@ -34,5 +34,12 @@
                 {% csrf_token %}
             </form>
         </div>
+        <div class="reset-pass">
+            <hr>
+            <!-- mt3 -->
+            <div class="">
+                <a href="{% url 'user:registration' %}">Create account</a>
+            </div>
+        </div>
     </section>
 {% endblock content %}
