--- a/eshop/users/templates/users/registration.html
+++ b/eshop/users/templates/users/registration.html
@@ -4,5 +4,64 @@
 {% block title %}Registration{% endblock title %}
 
 {% block content %}
-
+<!-- d-flex -->
+    <section class="lofin-reg">
+        <div class="login-title">
+            <h2>Registration</h2>
+            <form action="{% url 'user:registration' %}" method="post">
+                <div class="row">
+                    <div class="">
+                        <label for="id_first_name" class="form-label">
+                            First name
+                        </label>
+                        <input type="text" class="form-control" id="id_first_name"
+                        value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
+                        name="first_name" placeholder="your first name" required>
+                    </div>
+                    <div class="">
+                        <label for="id_last_name" class="form-label">
+                            Last name
+                        </label>
+                        <input type="text" class="form-control" id="id_last_name"
+                        value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}"
+                        name="last_name" placeholder="your last name" required>
+                    </div>
+                    <div class="">
+                        <label for="id_username" class="form-label">
+                            Username
+                        </label>
+                        <input type="text" class="form-control" id="id_username"
+                        value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
+                        name="username" placeholder="your username" required>
+                    </div>
+                    <div class="">
+                        <label for="id_email" class="form-label">
+                            Email
+                        </label>
+                        <input type="email" class="form-control" id="id_email"
+                        value="{% if form.email.value %}{{ form.email.value }}{% endif %}"
+                        name="email" placeholder="your email" required>
+                    </div>
+                    <div class="">
+                        <label for="id_password1" class="form-label">
+                            Password
+                        </label>
+                        <input type="password" class="form-control" id="id_password1"
+                        value="{% if form.password1.value %}{{ form.password1.value }}{% endif %}"
+                        name="password1" placeholder="your password" required>
+                    </div>
+                    <div class="">
+                        <label for="id_password2" class="form-label">
+                            Password
+                        </label>
+                        <input type="password" class="form-control" id="id_password2"
+                        value="{% if form.password2.value %}{{ form.password2.value }}{% endif %}"
+                        name="password2" placeholder="your password" required>
+                    </div>
+                </div>
+                <button type="submit" class="login-btn">Register</button>
+                {% csrf_token %}
+            </form>
+        </div>
+    </section>
 {% endblock content %}
