--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -41,7 +41,7 @@
                 {% endif %}
             </div>
         </div>
-        <a href="/"><img src="{% static 'img/logo.png' %}" alt="" class="main-logo"></a>
+        <a href="/shop"><img src="{% static 'img/logo.png' %}" alt="" class="main-logo"></a>
     </header>
     <div class="container">
         {% block content %}
