--- a/eshop/users/templates/users/login.html
+++ b/eshop/users/templates/users/login.html
@@ -7,30 +7,30 @@
 <!-- d-flex -->
     <section class="Login">
         <div class="login-title">
-            <h2>Login</h2>
-            <form action="{% url 'user:login' %}" method="post">
+            <h2>Вход</h2>
+            <form action="{% url 'users:login' %}" method="post">
                 {% if request.GET.next %}
                     <input type="hidden" name="next" value="{{ request.GET.next }}">
                 {% endif %}
                 <!-- mb-3 -->
                 <div class="">
                     <!-- form-label form style -->
-                    <label for="id_username" class="form-label">Username</label>
+                    <label for="id_username" class="form-label">Логин</label>
                     <!-- form-control form style -->
                     <input type="text" class="form-control"
                     value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
-                    name="username" id="id_username" placeholder="input username" required>
+                    name="username" id="id_username" required>
                 </div>
                 <!-- mb-3 -->
                 <div class="form-label">
                     <!-- form-label form style -->
-                    <label for="id_password" class="">Passowrd</label>
+                    <label for="id_password" class="">Пароль</label>
                     <!-- form-control form style -->
                     <input type="password" class="form-control"
-                    name="password" id="id_password" placeholder="input password" required>
+                    name="password" id="id_password" required>
                 </div>
                 <!-- form style -->
-                <button type="submit" class="login-btn">Login</button>
+                <button type="submit" class="login-btn">Войти</button>
                 {% csrf_token %}
             </form>
         </div>
@@ -38,7 +38,7 @@
             <hr>
             <!-- mt3 -->
             <div class="">
-                <a href="{% url 'user:registration' %}">Create account</a>
+                <a href="{% url 'users:registration' %}">Регистрация</a>
             </div>
         </div>
     </section>
