--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -1,10 +1,10 @@
 :root {
-    --background-image: linear-gradient(180deg, rgba(247, 247, 247, 1) 0%, rgb(194, 194, 194) 100%);
+    --background-image: linear-gradient(180deg, rgb(247, 247, 247) 0%, rgb(194, 194, 194) 100%);
     --border-black: 1px solid rgba(0, 0, 0, 0.37);
     --box-shadow: 0 0 20px rgb(0, 255, 255);
     --text-shadow: 0 0 10px rgb(0, 255, 255);
-    --gradient-logo: radial-gradient(circle,rgba(0, 136, 255, 1) 0%, rgb(0, 0, 139) 50%, rgba(0, 136, 255, 1) 100%);
-    --gradient-c: linear-gradient(180deg,rgba(40, 40, 176, 1) 0%, rgba(0, 136, 255, 1) 50%, rgba(40, 40, 176, 1) 100%);
+    --gradient-logo: radial-gradient(circle,rgb(0, 136, 255) 0%, rgb(0, 0, 139) 50%, rgb(0, 136, 255) 100%);
+    --gradient-c: linear-gradient(180deg,rgb(40, 40, 176) 0%, rgb(0, 136, 255) 50%, rgb(40, 40, 176) 100%);
 }
 h1 {
     font-size: 48px;
@@ -130,9 +130,6 @@ footer {
     height: 195px;
     border-top: var(--border-black);
 }
-/* .cart-card + .cart-card {
-    border-top: var(--border-black);
-} */
 .cart-card:last-child {
     border-bottom: var(--border-black);
 }
@@ -445,4 +442,156 @@ footer {
 .add-to-cart-btn:hover {
     transform: scale(1.05);
     box-shadow: var(--box-shadow);     
+}
+.login-reg {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 25vw;
+}
+.login-title {
+    text-align: center;
+    width: 25vw;
+}
+.row {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 16px;
+}
+.form {
+    width: 100%;
+    text-align: left;
+}
+.form-control {
+    box-sizing: border-box;
+    width: 100%;
+    height: 25px;
+    border: var(--border-black);
+    border-radius: 4px;
+    transition: all 0.2s ease;
+    background-color: #fff;
+    outline: 0;
+}
+.form-control:focus {
+    border-color: rgb(0, 136, 255);
+}
+.is-invalid {
+    border-color: #dc3545;
+}
+.invalid-feedback {
+    color: #dc3545;
+}
+.login-btn {
+    margin-top: 14px;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: var(--gradient-c);
+    width: 100%;
+    height: 40px;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: var(--border-black);
+    border-radius: 10px;
+}
+.login-btn a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.login-btn:hover {
+    transform: scale(1.05);
+    box-shadow: var(--box-shadow);
+}
+.reg-btn {
+    margin-top: 7px;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 40px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: var(--border-black);
+    border-radius: 10px;
+}
+.reg-btn a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.reg-btn:hover {
+    transform: scale(1.05);
+    box-shadow: var(--box-shadow);
+}
+.profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 100vw;
+}
+.profile-title {
+    text-align: center;
+}
+.profile-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 40px;
+}
+.div-img-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+}
+.img-profile {
+    height: 100%;
+    width: auto;
+    border-radius: 10px;
+}
+.form-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.profile-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    margin: 48px auto;
+    width: 100%;
+    height: 50px;
+    background-image: var(--gradient-c);
+    color: #fff;
+    border: var(--border-black);
+    border-radius: 10px;
+    transition: all 0.3s linear;
+}
+.profile-btn:hover {
+    transform: scale(1.05);
+    box-shadow: var(--box-shadow);
 }
