--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -35,6 +35,7 @@
                     <a href="{% url 'cart:cart_detail' %}"><img src="{% static 'img/cart.png' %}" alt="" class="cart-img"></a>
                 </div>
                 {% if user.is_authenticated %}
+                <a href="{% url 'users:profile' %}" class="login-button">Профиль</a>
                     <a href="{% url 'users:logout' %}" class="login-button">Выход</a>
                 {% else %}
                     <a href="{% url 'users:login' %}" class="login-button">Вход</a>
