--- a/eshop/users/templates/users/profile.html
+++ b/eshop/users/templates/users/profile.html
@@ -4,52 +4,49 @@
 {% block title %}Profile{% endblock title %}
 
 {% block content %}
-<!-- d-flex -->
-    <div class="">
-        <!-- p4 m4 mx2 bgwhite -->
-        <div class="profile">
+    <section class="profile">
+        <div class="profile-title">
             <h2>Профиль</h2>
-            <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
-                <!-- d-flex -->
-                <div class="">
-                    <div class="1box">
-                        <!-- col-md12 -->
-                        <div class="">
-                            {% if user.image %}
-                                <img src="{{ users.image.url }}" alt="" class="img-fluid">
-                            {% else %}
-                                <img src="{% static 'img/no_image.png' %}" alt="" class="img-fluid">
-                            {% endif %}
-                            <input type="file" class="form-control" id="id_image"
-                            name="image" accept="image/*">
-                        </div>
-                        <div>
-                            <label for="id_first_name" class="">Имя</label>
-                            <input type="text" name="" class="form-control" id="id_first_name"
-                            name="first_name" placeholder="Имя" value="{{ form.first_name.value}}" required>
-                        </div>
-                        <div>
-                            <label for="id_last_name" class="">Фамилия</label>
-                            <input type="text" name="" class="form-control" id="id_last_name"
-                            name="last_name" placeholder="Фамилия" value="{{ form.last_name.value}}" required>
-                        </div>
-                    </div>
-                    <div class="2box">
-                        <div>
-                            <label for="id_username" class="">Логин</label>
-                            <input type="text" name="" class="form-control" id="id_username"
-                            name="username" placeholder="Логин" value="{{ form.username.value}}" required>
-                        </div>
-                        <div>
-                            <label for="id_email" class="">Почта</label>
-                            <input type="email" name="" class="form-control" id="email"
-                            name="email" placeholder="Почта" value="{{ form.email.value}}" required>
-                        </div>
-                    </div>
-                </div>
-                <button type="submit" class="profile_btn">Сохранить</button>
-                {% csrf_token %}
-            </form>
         </div>
-    </div>
+        <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
+            <div class="profile-content">
+                <div class="div-img-profile">
+                    {% if user.image %}
+                        <img src="{{ user.image.url }}" alt="" class="img-profile">
+                    {% else %}
+                        <img src="{% static 'img/no_image.png' %}" alt="" class="img-profile">
+                    {% endif %}
+                    <input type="file" class="choose-img" id="id_image" name="image" accept="image/*">
+                </div>
+                <div class="profile-fields">
+                    <div class="form-row">
+                        <div class="form">
+                            <label for="id_first_name">Имя</label>
+                            <input type="text" class="form-control" id="id_first_name"
+                                    name="first_name" value="{{ form.first_name.value }}" required>
+                        </div>
+                        <div class="form">
+                            <label for="id_last_name">Фамилия</label>
+                            <input type="text" class="form-control" id="id_last_name"
+                                    name="last_name" value="{{ form.last_name.value }}" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form">
+                            <label for="id_username">Логин</label>
+                            <input type="text" class="form-control" id="id_username"
+                                    name="username" value="{{ form.username.value }}" required>
+                        </div>
+                        <div class="form">
+                            <label for="id_email">Почта</label>
+                            <input type="email" class="form-control" id="id_email"
+                                    name="email" value="{{ form.email.value }}" required>
+                        </div>
+                    </div>
+                    <button type="submit" class="profile-btn">Сохранить</button>
+                </div>
+            </div>
+            {% csrf_token %}
+        </form>
+    </section>
 {% endblock content %}
